# zkRust

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Makefile  README.md  install_zkrust_from_source.sh  rust-toolchain.toml
.github/workflows/: docker-publish.yml
examples/bubble_sort/: Cargo.toml
examples/bubble_sort/src/: main.rs
examples/ecdsa/: Cargo.toml
examples/ecdsa/src/: main.rs
examples/eddsa/: Cargo.toml
examples/eddsa/src/: main.rs
examples/fibonacci/src/: main.rs
examples/json/src/: main.rs
examples/keccak256/: Cargo.toml
examples/keccak256/src/: main.rs
examples/sha/: Cargo.toml
examples/sha/src/: main.rs
examples/tendermint/src/: main.rs
src/: lib.rs  main.rs  risc0.rs  sp1.rs  telemetry.rs  utils.rs
workspaces/base_files/risc0/: cargo_host  host
workspaces/base_files/sp1/: cargo_guest  cargo_host  host
workspaces/risc0/host/: Cargo.toml
workspaces/risc0/host/src/: main.rs  metrics.rs
workspaces/risc0/methods/: build.rs
workspaces/risc0/methods/guest/: Cargo.toml
workspaces/risc0/methods/guest/src/: main.rs
workspaces/sp1/: rust-toolchain.toml
workspaces/sp1/program/: Cargo.toml
workspaces/sp1/program/elf/: riscv32im-succinct-zkvm-elf
workspaces/sp1/program/src/: main.rs
workspaces/sp1/script/: Cargo.toml
workspaces/sp1/script/src/: main.rs  metrics.rs
zk_rust_io/src/: lib.rs
