[package]
name = "eddsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["digest", "rand_core", "serde", "signature"] }
rand = "0.8"
zk_rust_io = { git = "https://github.com/yetanotherco/zkRust.git" }