[package]
name = "keccak256-sp1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
sha3 = { version = "0.10.8", default-features = false }
zk_rust_io = { git = "https://github.com/yetanotherco/zkRust.git" }