[package]
name = "host"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["risc0-zkvm/cuda"]

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { git = "https://github.com/risc0/risc0", tag = "v1.2.0", features = ["prove"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

digest = "0.10.7"
rand = "0.8.5"
rsa = "0.6.0"                                                                           # Check for the latest version
sha2 = "0.10.8"