[workspace]
[package]
version = "0.1.0"
name = "method"
edition = "2021"

[build-dependencies]
sp1-helper = "4.0.0"

[features]
default = []
cuda = ["dep:sp1-cuda", "sp1-sdk/cuda"]

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v3.4.0" }
sp1-prover = { git = "https://github.com/succinctlabs/sp1.git", tag = "v3.4.0" }
sp1-cuda = { git = "https://github.com/succinctlabs/sp1.git", tag = "v3.4.0", optional = true }
sp1-stark = { git = "https://github.com/succinctlabs/sp1.git", tag = "v3.4.0" }
sp1-core-executor = { git = "https://github.com/succinctlabs/sp1.git", tag = "v3.4.0" }
sp1-core-machine = { git = "https://github.com/succinctlabs/sp1.git", tag = "v3.4.0" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
zk_rust_io = { git = "https://github.com/yetanotherco/zkRust.git" }
